antlrParser/generated/GrammarParser.py
# Generated from Grammar.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int main()'", "'if'", "'else'", "'for'", 
                     "'cin'", "'cout'", "'return 0'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'>>'", "'<<'", "<INVALID>", "','", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "<INVALID>", 
                     "<INVALID>", "'&'", "'*'", "'+'", "'-'", "'/'", "'%'", 
                     "'|'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STREXP", "NUMERIC", "TYPENAME", "RIGHTARROWS", "LEFTARROWS", 
                      "WHITESPACE", "COMMA", "LPAR", "RPAR", "LBRA", "RBRA", 
                      "LSQ", "RSQ", "SEMICOLON", "INCDEC", "UNARY", "HOMER", 
                      "STAR", "PLUS", "MINUS", "DEL", "MOD", "LOGOR", "ASSIGNMENT", 
                      "LOGIC" ]

    RULE_program = 0
    RULE_eof = 1
    RULE_gl = 2
    RULE_main = 3
    RULE_line = 4
    RULE_ifst = 5
    RULE_boolex = 6
    RULE_arg = 7
    RULE_expression = 8
    RULE_simple_variable_operation = 9
    RULE_op_application = 10
    RULE_forst = 11
    RULE_strr = 12
    RULE_variables = 13
    RULE_variable = 14
    RULE_expansion = 15
    RULE_cin = 16
    RULE_cout = 17
    RULE_retst = 18
    RULE_variablename = 19
    RULE_typename = 20
    RULE_strexp = 21
    RULE_numeric = 22
    RULE_semicolon = 23
    RULE_assignment = 24
    RULE_arithmetic = 25
    RULE_star = 26
    RULE_homer = 27
    RULE_comma = 28
    RULE_unary = 29
    RULE_lbra = 30
    RULE_rbra = 31
    RULE_lpar = 32
    RULE_rpar = 33
    RULE_lsq = 34
    RULE_rsq = 35
    RULE_logic = 36
    RULE_leftarrows = 37
    RULE_rightarrows = 38

    ruleNames =  [ "program", "eof", "gl", "main", "line", "ifst", "boolex", 
                   "arg", "expression", "simple_variable_operation", "op_application", 
                   "forst", "strr", "variables", "variable", "expansion", 
                   "cin", "cout", "retst", "variablename", "typename", "strexp", 
                   "numeric", "semicolon", "assignment", "arithmetic", "star", 
                   "homer", "comma", "unary", "lbra", "rbra", "lpar", "rpar", 
                   "lsq", "rsq", "logic", "leftarrows", "rightarrows" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    STREXP=8
    NUMERIC=9
    TYPENAME=10
    RIGHTARROWS=11
    LEFTARROWS=12
    WHITESPACE=13
    COMMA=14
    LPAR=15
    RPAR=16
    LBRA=17
    RBRA=18
    LSQ=19
    RSQ=20
    SEMICOLON=21
    INCDEC=22
    UNARY=23
    HOMER=24
    STAR=25
    PLUS=26
    MINUS=27
    DEL=28
    MOD=29
    LOGOR=30
    ASSIGNMENT=31
    LOGIC=32

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gl(self):
            return self.getTypedRuleContext(GrammarParser.GlContext,0)


        def eof(self):
            return self.getTypedRuleContext(GrammarParser.EofContext,0)


        def main(self):
            return self.getTypedRuleContext(GrammarParser.MainContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.gl()
            self.state = 80
            _la = self._input.LA(1)
            if _la==GrammarParser.T__0:
                self.state = 79
                self.main()


            self.state = 82
            self.eof()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EofContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_eof

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEof" ):
                listener.enterEof(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEof" ):
                listener.exitEof(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEof" ):
                return visitor.visitEof(self)
            else:
                return visitor.visitChildren(self)




    def eof(self):

        localctx = GrammarParser.EofContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_eof)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def strr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.StrrContext)
            else:
                return self.getTypedRuleContext(GrammarParser.StrrContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_gl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGl" ):
                listener.enterGl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGl" ):
                listener.exitGl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGl" ):
                return visitor.visitGl(self)
            else:
                return visitor.visitChildren(self)




    def gl(self):

        localctx = GrammarParser.GlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_gl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GrammarParser.TYPENAME:
                self.state = 86
                self.strr()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lbra(self):
            return self.getTypedRuleContext(GrammarParser.LbraContext,0)


        def rbra(self):
            return self.getTypedRuleContext(GrammarParser.RbraContext,0)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.LineContext)
            else:
                return self.getTypedRuleContext(GrammarParser.LineContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = GrammarParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(GrammarParser.T__0)
            self.state = 93
            self.lbra()
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.line()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__1) | (1 << GrammarParser.T__3) | (1 << GrammarParser.T__4) | (1 << GrammarParser.T__5) | (1 << GrammarParser.T__6) | (1 << GrammarParser.TYPENAME))) != 0)):
                    break

            self.state = 99
            self.rbra()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def strr(self):
            return self.getTypedRuleContext(GrammarParser.StrrContext,0)


        def ifst(self):
            return self.getTypedRuleContext(GrammarParser.IfstContext,0)


        def forst(self):
            return self.getTypedRuleContext(GrammarParser.ForstContext,0)


        def retst(self):
            return self.getTypedRuleContext(GrammarParser.RetstContext,0)


        def cin(self):
            return self.getTypedRuleContext(GrammarParser.CinContext,0)


        def cout(self):
            return self.getTypedRuleContext(GrammarParser.CoutContext,0)


        def simple_variable_operation(self):
            return self.getTypedRuleContext(GrammarParser.Simple_variable_operationContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = GrammarParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_line)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 101
                self.strr()
                pass

            elif la_ == 2:
                self.state = 102
                self.ifst()
                pass

            elif la_ == 3:
                self.state = 103
                self.forst()
                pass

            elif la_ == 4:
                self.state = 104
                self.retst()
                pass

            elif la_ == 5:
                self.state = 105
                self.cin()
                pass

            elif la_ == 6:
                self.state = 106
                self.cout()
                pass

            elif la_ == 7:
                self.state = 107
                self.simple_variable_operation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lpar(self):
            return self.getTypedRuleContext(GrammarParser.LparContext,0)


        def boolex(self):
            return self.getTypedRuleContext(GrammarParser.BoolexContext,0)


        def rpar(self):
            return self.getTypedRuleContext(GrammarParser.RparContext,0)


        def lbra(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.LbraContext)
            else:
                return self.getTypedRuleContext(GrammarParser.LbraContext,i)


        def rbra(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.RbraContext)
            else:
                return self.getTypedRuleContext(GrammarParser.RbraContext,i)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.LineContext)
            else:
                return self.getTypedRuleContext(GrammarParser.LineContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_ifst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfst" ):
                listener.enterIfst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfst" ):
                listener.exitIfst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfst" ):
                return visitor.visitIfst(self)
            else:
                return visitor.visitChildren(self)




    def ifst(self):

        localctx = GrammarParser.IfstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(GrammarParser.T__1)
            self.state = 111
            self.lpar()
            self.state = 112
            self.boolex()
            self.state = 113
            self.rpar()
            self.state = 114
            self.lbra()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__1) | (1 << GrammarParser.T__3) | (1 << GrammarParser.T__4) | (1 << GrammarParser.T__5) | (1 << GrammarParser.T__6) | (1 << GrammarParser.TYPENAME))) != 0):
                self.state = 115
                self.line()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.rbra()
            self.state = 132
            _la = self._input.LA(1)
            if _la==GrammarParser.T__2:
                self.state = 122
                self.match(GrammarParser.T__2)
                self.state = 123
                self.lbra()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__1) | (1 << GrammarParser.T__3) | (1 << GrammarParser.T__4) | (1 << GrammarParser.T__5) | (1 << GrammarParser.T__6) | (1 << GrammarParser.TYPENAME))) != 0):
                    self.state = 124
                    self.line()
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 130
                self.rbra()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoolexContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_boolex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolex" ):
                listener.enterBoolex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolex" ):
                listener.exitBoolex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolex" ):
                return visitor.visitBoolex(self)
            else:
                return visitor.visitChildren(self)




    def boolex(self):

        localctx = GrammarParser.BoolexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_boolex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variablename(self):
            return self.getTypedRuleContext(GrammarParser.VariablenameContext,0)


        def numeric(self):
            return self.getTypedRuleContext(GrammarParser.NumericContext,0)


        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = GrammarParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg)
        try:
            self.state = 139
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.variablename()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.numeric()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lpar(self):
            return self.getTypedRuleContext(GrammarParser.LparContext,0)


        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def rpar(self):
            return self.getTypedRuleContext(GrammarParser.RparContext,0)


        def op_application(self):
            return self.getTypedRuleContext(GrammarParser.Op_applicationContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = GrammarParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression)
        try:
            self.state = 146
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.lpar()
                self.state = 142
                self.expression()
                self.state = 143
                self.rpar()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.op_application()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_variable_operationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variablename(self):
            return self.getTypedRuleContext(GrammarParser.VariablenameContext,0)


        def arg(self):
            return self.getTypedRuleContext(GrammarParser.ArgContext,0)


        def semicolon(self):
            return self.getTypedRuleContext(GrammarParser.SemicolonContext,0)


        def logic(self):
            return self.getTypedRuleContext(GrammarParser.LogicContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(GrammarParser.ArithmeticContext,0)


        def assignment(self):
            return self.getTypedRuleContext(GrammarParser.AssignmentContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_simple_variable_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_variable_operation" ):
                listener.enterSimple_variable_operation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_variable_operation" ):
                listener.exitSimple_variable_operation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_variable_operation" ):
                return visitor.visitSimple_variable_operation(self)
            else:
                return visitor.visitChildren(self)




    def simple_variable_operation(self):

        localctx = GrammarParser.Simple_variable_operationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_simple_variable_operation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.variablename()
            self.state = 154
            token = self._input.LA(1)
            if token in [GrammarParser.LOGIC]:
                self.state = 149
                self.logic()

            elif token in [GrammarParser.HOMER, GrammarParser.STAR, GrammarParser.PLUS, GrammarParser.MINUS, GrammarParser.DEL, GrammarParser.MOD, GrammarParser.LOGOR]:
                self.state = 150
                self.arithmetic()
                self.state = 151
                self.assignment()

            elif token in [GrammarParser.ASSIGNMENT]:
                self.state = 153
                self.assignment()

            else:
                raise NoViableAltException(self)

            self.state = 156
            self.arg()
            self.state = 157
            self.semicolon()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Op_applicationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self):
            return self.getTypedRuleContext(GrammarParser.UnaryContext,0)


        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def arg(self):
            return self.getTypedRuleContext(GrammarParser.ArgContext,0)


        def variablename(self):
            return self.getTypedRuleContext(GrammarParser.VariablenameContext,0)


        def numeric(self):
            return self.getTypedRuleContext(GrammarParser.NumericContext,0)


        def lpar(self):
            return self.getTypedRuleContext(GrammarParser.LparContext,0)


        def rpar(self):
            return self.getTypedRuleContext(GrammarParser.RparContext,0)


        def logic(self):
            return self.getTypedRuleContext(GrammarParser.LogicContext,0)


        def arithmetic(self):
            return self.getTypedRuleContext(GrammarParser.ArithmeticContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_op_application

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp_application" ):
                listener.enterOp_application(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp_application" ):
                listener.exitOp_application(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_application" ):
                return visitor.visitOp_application(self)
            else:
                return visitor.visitChildren(self)




    def op_application(self):

        localctx = GrammarParser.Op_applicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_op_application)
        try:
            self.state = 176
            token = self._input.LA(1)
            if token in [GrammarParser.UNARY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.unary()
                self.state = 160
                self.expression()

            elif token in [GrammarParser.NUMERIC, GrammarParser.TYPENAME, GrammarParser.LPAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                token = self._input.LA(1)
                if token in [GrammarParser.TYPENAME]:
                    self.state = 162
                    self.variablename()

                elif token in [GrammarParser.NUMERIC]:
                    self.state = 163
                    self.numeric()

                elif token in [GrammarParser.LPAR]:
                    self.state = 164
                    self.lpar()
                    self.state = 165
                    self.expression()
                    self.state = 166
                    self.rpar()

                else:
                    raise NoViableAltException(self)

                self.state = 172
                token = self._input.LA(1)
                if token in [GrammarParser.LOGIC]:
                    self.state = 170
                    self.logic()

                elif token in [GrammarParser.HOMER, GrammarParser.STAR, GrammarParser.PLUS, GrammarParser.MINUS, GrammarParser.DEL, GrammarParser.MOD, GrammarParser.LOGOR]:
                    self.state = 171
                    self.arithmetic()

                else:
                    raise NoViableAltException(self)

                self.state = 174
                self.arg()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lpar(self):
            return self.getTypedRuleContext(GrammarParser.LparContext,0)


        def semicolon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.SemicolonContext)
            else:
                return self.getTypedRuleContext(GrammarParser.SemicolonContext,i)


        def rpar(self):
            return self.getTypedRuleContext(GrammarParser.RparContext,0)


        def lbra(self):
            return self.getTypedRuleContext(GrammarParser.LbraContext,0)


        def rbra(self):
            return self.getTypedRuleContext(GrammarParser.RbraContext,0)


        def strr(self):
            return self.getTypedRuleContext(GrammarParser.StrrContext,0)


        def boolex(self):
            return self.getTypedRuleContext(GrammarParser.BoolexContext,0)


        def variablename(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.VariablenameContext)
            else:
                return self.getTypedRuleContext(GrammarParser.VariablenameContext,i)


        def arithmetic(self):
            return self.getTypedRuleContext(GrammarParser.ArithmeticContext,0)


        def assignment(self):
            return self.getTypedRuleContext(GrammarParser.AssignmentContext,0)


        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.LineContext)
            else:
                return self.getTypedRuleContext(GrammarParser.LineContext,i)


        def numeric(self):
            return self.getTypedRuleContext(GrammarParser.NumericContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_forst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForst" ):
                listener.enterForst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForst" ):
                listener.exitForst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForst" ):
                return visitor.visitForst(self)
            else:
                return visitor.visitChildren(self)




    def forst(self):

        localctx = GrammarParser.ForstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_forst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(GrammarParser.T__3)
            self.state = 179
            self.lpar()
            self.state = 181
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 180
                self.strr()


            self.state = 184
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 183
                self.semicolon()


            self.state = 187
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.NUMERIC) | (1 << GrammarParser.TYPENAME) | (1 << GrammarParser.LPAR) | (1 << GrammarParser.UNARY))) != 0):
                self.state = 186
                self.boolex()


            self.state = 189
            self.semicolon()
            self.state = 197
            _la = self._input.LA(1)
            if _la==GrammarParser.TYPENAME:
                self.state = 190
                self.variablename()
                self.state = 191
                self.arithmetic()
                self.state = 192
                self.assignment()
                self.state = 195
                token = self._input.LA(1)
                if token in [GrammarParser.TYPENAME]:
                    self.state = 193
                    self.variablename()

                elif token in [GrammarParser.NUMERIC]:
                    self.state = 194
                    self.numeric()

                else:
                    raise NoViableAltException(self)



            self.state = 199
            self.rpar()
            self.state = 200
            self.lbra()
            self.state = 204
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__1) | (1 << GrammarParser.T__3) | (1 << GrammarParser.T__4) | (1 << GrammarParser.T__5) | (1 << GrammarParser.T__6) | (1 << GrammarParser.TYPENAME))) != 0):
                self.state = 201
                self.line()
                self.state = 206
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 207
            self.rbra()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StrrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typename(self):
            return self.getTypedRuleContext(GrammarParser.TypenameContext,0)


        def variables(self):
            return self.getTypedRuleContext(GrammarParser.VariablesContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_strr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrr" ):
                listener.enterStrr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStrr" ):
                listener.exitStrr(self)
